logs/dag_id=sales_datawarehouse/run_id=manual__2022-10-24T201250.944853+0000/task_id=insert_vendas/attempt=1.log
[2022-10-24T20:13:30.590+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: sales_datawarehouse.insert_vendas manual__2022-10-24T20:12:50.944853+00:00 [queued]>
[2022-10-24T20:13:30.603+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: sales_datawarehouse.insert_vendas manual__2022-10-24T20:12:50.944853+00:00 [queued]>
[2022-10-24T20:13:30.604+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-10-24T20:13:30.605+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 2
[2022-10-24T20:13:30.605+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-10-24T20:13:30.623+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): insert_vendas> on 2022-10-24 20:12:50.944853+00:00
[2022-10-24T20:13:30.629+0000] {standard_task_runner.py:54} INFO - Started process 16820 to run task
[2022-10-24T20:13:30.632+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'sales_datawarehouse', 'insert_vendas', 'manual__2022-10-24T20:12:50.944853+00:00', '--job-id', '295', '--raw', '--subdir', 'DAGS_FOLDER/sales_dw.py', '--cfg-path', '/tmp/tmpuoa0d2xy']
[2022-10-24T20:13:30.634+0000] {standard_task_runner.py:83} INFO - Job 295: Subtask insert_vendas
[2022-10-24T20:13:30.635+0000] {dagbag.py:525} INFO - Filling up the DagBag from /opt/***/dags/sales_dw.py
[2022-10-24T20:13:31.357+0000] {task_command.py:384} INFO - Running <TaskInstance: sales_datawarehouse.insert_vendas manual__2022-10-24T20:12:50.944853+00:00 [running]> on host 83cd0ab98720
[2022-10-24T20:13:31.457+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=pedromenegat
AIRFLOW_CTX_DAG_ID=sales_datawarehouse
AIRFLOW_CTX_TASK_ID=insert_vendas
AIRFLOW_CTX_EXECUTION_DATE=2022-10-24T20:12:50.944853+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-10-24T20:12:50.944853+00:00
[2022-10-24T20:13:31.495+0000] {base.py:71} INFO - Using connection ID '***_localhost' for task execution.
[2022-10-24T20:13:31.575+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/sales_dw.py", line 47, in teste_xcom
    data_vendas_insert.insert_rows('vendas',  pd.DataFrame(vendas))
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 409, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: INSERT INTO vendas  VALUES ('i','d','_','v','e','n','d','a')
                                                        ^

[2022-10-24T20:13:31.593+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=sales_datawarehouse, task_id=insert_vendas, execution_date=20221024T201250, start_date=20221024T201330, end_date=20221024T201331
[2022-10-24T20:13:31.610+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 295 for task insert_vendas (INSERT has more expressions than target columns
LINE 1: INSERT INTO vendas  VALUES ('i','d','_','v','e','n','d','a')
                                                        ^
; 16820)
[2022-10-24T20:13:31.648+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-10-24T20:13:31.675+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
